Fix horizontal scroll issue

--- a/third-year-project/src/app/about/about.component.scss
+++ b/third-year-project/src/app/about/about.component.scss
@@ -5,11 +5,10 @@
 
 body {
   padding-bottom: 5vw;
-  margin: -0.8%;
   min-height: 100vh;
   text-align: center;
-  max-width: 100%;
 }
+// LOGO
 
 // NAV BAR
 a {
@@ -17,7 +16,7 @@ a {
 }
 .navbar-container {
   // position: fixed;
-  width: 100%;
+  width: 101vw;
 	text-align: center;
 	background-color: #ffffff;
 	box-shadow: 0px -5vw 1vw 5vw #366666aa;
@@ -25,6 +24,8 @@ a {
 	font-size: 0;
   font-family: 'Oswald';
   z-index: 100000;
+  margin-left:-1.3vw;
+  margin-top:-0.8%;
 }
 .navbar-container ul {
 	margin: 0;
