--- a/third-year-project/src/styles.scss
+++ b/third-year-project/src/styles.scss
@@ -1,6 +1,8 @@
 html {
   background-color: #95D5B2;
   align-items: center;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 // HAND
